# interview-ai

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3d4131e432af_add_hnsw_index_on_question_embeddings.py  4b8e75fe50f5_create_initial_tables.py  8584a8ed1b06_enable_pgvector_extension.py  b518456ea551_redesign_for_dynamic_interviews.py  bc16035f38b3_convert_datetime_columns_to_timezone_.py  c5a8f3e21b96_add_bm25_fulltext_search.py  d7a2f1c9e3b4_add_domain_to_responses.py  e9c4b7a210f8_add_current_question_data_to_sessions.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: answer_evaluator.py  follow_up_decider.py  graph.py  interview_controller.py  question_generator.py  resume_analyzer.py  state.py  utils.py
backend/app/auth/: dependencies.py  security.py
backend/app/models/: database_models.py  schemas.py
backend/app/routers/: auth.py  interviews.py  questions.py  sessions.py
backend/app/services/: bm25_service.py  embedding_service.py  guardrails.py  interview_service.py  llm_prompts.py  llm_service.py  pdf_parser.py  rag_service.py  redis_service.py
backend/scripts/: embed_seed.py  generate_questions.py  seed.py  test_agents.py  test_llm.py
backend/tests/: conftest.py  test_auth.py  test_guardrails.py  test_health.py  test_interviews.py  test_questions.py  test_redis.py  test_sessions.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  (+2 more)
(+9 files in other folders)
